[24569] Remove CorePreferenceInitializer->LocalConfigService#staticInit